Content for this first blog post.
Still needs a tiny bit of refinement, but it's getting there.

--- a/_posts/2015-06-02-new-site.md
+++ b/_posts/2015-06-02-new-site.md
@@ -7,192 +7,37 @@ comments: true
 author: arokem
 ---
 
-## Heading 2: Lorem ipsum dolor sit amet, test link adipiscing elit. **This is strong**. Nullam dignissim convallis est. Quisque aliquam.
+## nipy.github.io: a new web page for the Nipy community
 
-### Heading 3: Lorem ipsum dolor sit amet, test link adipiscing elit. **This is strong**. Nullam dignissim convallis est. Quisque aliquam.
+Welcome to [nipy.github.io](http://nipy.github.io). These pages are the new community portal for the Neuroimaging in Python community. 
 
-#### Heading 4: Lorem ipsum dolor sit amet, test link adipiscing elit. **This is strong**. Nullam dignissim convallis est. Quisque aliquam.
+You might ask yourself: "Who is this Nipy community". Roughly speaking, this 
+community is defined by the intersection of the [scientific python](http://scipy.org) community, and the neuroimaging community:  scientists who measure the structure and function of the  brain, primarily using non-invasive methods, such as magnetic resonance 
+imaging (MRI).  
 
-##### Heading 5: Lorem ipsum dolor sit amet, test link adipiscing elit. **This is strong**. Nullam dignissim convallis est. Quisque aliquam.
+During the course of the 21st century, since the [first work](https://github.com/scipy/scipy/commit/02de46a5464f182d3d64be5a7ee1087ae8be8646) on the scipy software library started, this community has grown 
+dramatically to include a sprawling eco-system of libraries, that has taken 
+hold in scientific fields as diverse as (very partial list...) 
+[astronomy](http://www.astropy.org/), 
+[bioinformatics](http://biopython.org/wiki/Main_Page), [nuclear 
+engineering](http://pyne.io/), and [number theory](http://www.sagemath.org/). 
+Thanks to its openess, its clarity, its ease of installation and its 
+portability across a range of platforms, together with other languages such as 
+[R](http://www.r-project.org/), Python is now one of the contenders for 
+the title 'The *lingua franca* of reproducible research'.
 
-###### Heading 6: Lorem ipsum dolor sit amet, test link adipiscing elit. **This is strong**. Nullam dignissim convallis est. Quisque aliquam.
+In addition to benefitting from these developments, the neuroimaging community has a long and illustrious tradition of contributions back into  this eco system. In fact, several important early contributors to this ecosystem are/were neuroscientists. For example, [John Hunter](http://numfocus.org/news/2012/08/28/johnhunter/), the original author of the [Matplotlib](http://matplotlib.org/) plotting library, (one of the components of [the core scipy stack](http://www.scipy.org/stackspec.html)) started working on MPL while he was a researcher in neuroscience at the University of Chicago. Many other neuroscientists have also contributed over the years various parts and pieces to this ecosystem. 
+ 
+Python and neuroimaging undoubtedly also have an excellent future together. 
+As the neuroscience community becomes increasingly aware of the importance of reproducible computaional research, and as neuroimaging data-sets grow, and cloud-computing methods and services become increasingly accessible, there are more and more ways for neuroscientists to benefit and to contribute to use of the Python scientific stack. 
 
-### Body text
+On the first points of contact for new users of python in neuroimaging is the  [nipy.org](http://nipy.org) website. For many years, this website was generated using the [Sphinx documentation system](http://sphinx-doc.org/) and looked roughly like [this](http://web.archive.org/web/20150205015210/http://www.nipy.org/). Because many of the projects were originally hosted on Sourceforge, the website was also hosted there. Over the years, mall of the nipy projects moved to github, and though there are many benefits to using sphinx for websites (for one, we tend to use it for documenting the software), a more welcoming, informative and dynamic website was definitely needed.
 
-Lorem ipsum dolor sit amet, test link adipiscing elit. **This is strong**. Nullam dignissim convallis est. Quisque aliquam.
+And though we haven't quite found room for the text that once welcomed users to our front page, we still stand behind it as a community, and find it a useful reminder of the purpose of this community:  "The purpose of NIPY is to make it easier to do better brain imaging research. We believe that neuroscience ideas and analysis ideas develop together. Good ideas come from understanding; understanding comes from clarity, and clarity must come from well-designed teaching materials and well-designed software. The software must be designed as a natural extension of the underlying ideas."
 
-*This is emphasized*. Donec faucibus. Nunc iaculis suscipit dui. 53 = 125. Water is H<sub>2</sub>O. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. The New York Times <cite>(That’s a citation)</cite>. <u>Underline</u>. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.
+![Reggie]({{ site.url }}/images/reggie.png)
 
-HTML and <abbr title="cascading stylesheets">CSS<abbr> are our tools. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus.
 
-### Blockquotes
 
-> Lorem ipsum dolor sit amet, test link adipiscing elit. Nullam dignissim convallis est. Quisque aliquam.
 
-> <cite>First Lastname, *The Greatest Article*</cite>
-
-## List Types
-
-### Ordered Lists
-
-1. Item one
-	 1. sub item one
-	 2. sub item two
-	 3. sub item three
-2. Item two
-
-### Unordered Lists
-
-* Item one
-* Item two
-* Item three
-
-## Tables
-
-| Header1 | Header2 | Header3 |
-|:--------|:-------:|--------:|
-| cell1   | cell2   | cell3   |
-| cell4   | cell5   | cell6   |
-|----
-| cell1   | cell2   | cell3   |
-| cell4   | cell5   | cell6   |
-
-## Code Snippets
-
-Syntax highlighting via Pygments
-
-{% highlight css linenos=table %}
-#container {
-	float: left;  
-	margin: 0 -240px 0 0;  
-	width: 100%;
-}
-{% endhighlight %}
-
-Non Pygments code example
-
-	<div id="awesome">
-			<p>This is great isn't it?</p>
-	</div>
-
-## Buttons
-
-Make any link standout more when applying the `.btn` class.
-
-{% highlight html %}
-<a href="#" class="btn">Default Button</a>
-{% endhighlight %}
-
-<a href="#" class="btn">.btn</a>
-<a href="#" class="btn-inverse">.btn-inverse</a>
-<a href="#" class="btn-info">.btn-info</a>
-<a href="#" class="btn-warning">.btn-warning</a>
-<a href="#" class="btn-danger">.btn-danger</a>
-<a href="#" class="btn-success">.btn-success</a>
-
-### Social Media Buttons
-
-<a href="#" class="btn-social facebook"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</a>
-<a href="#" class="btn-social flickr"><i class="fa fa-flickr" aria-hidden="true"></i> Flickr</a>
-<a href="#" class="btn-social foursquare"><i class="fa fa-foursquare" aria-hidden="true"></i> Foursquare</a>
-<a href="#" class="btn-social google-plus"><i class="fa fa-google-plus" aria-hidden="true"></i> Google+</a>
-<a href="#" class="btn-social instagram"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
-<a href="#" class="btn-social linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
-<a href="#" class="btn-social pinterest"><i class="fa fa-pinterest" aria-hidden="true"></i> Pinterest</a>
-<a href="#" class="btn-social rss"><i class="fa fa-rss" aria-hidden="true"></i> RSS</a>
-<a href="#" class="btn-social tumblr"><i class="fa fa-tumblr" aria-hidden="true"></i> Tumblr</a>
-<a href="#" class="btn-social twitter"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
-<a href="#" class="btn-social vimeo"><i class="fa fa-vimeo-square" aria-hidden="true"></i> Vimeo</a>
-<a href="#" class="btn-social youtube"><i class="fa fa-youtube" aria-hidden="true"></i> YouTube</a>
-
-## Badges
-
-<div class="badges">
-	<span class="badge">1</span>
-	<span class="badge inverse">2</span>
-	<span class="badge info">3</span>
-	<span class="badge warning">4</span>
-	<span class="badge danger">5</span>
-	<span class="badge success">6</span>
-</div>
-
-## Notices
-
-Set a block of text off from the rest.
-
-**Default Notice:** `.notice` Maecenas ornare tortor. [Donec sed tellus]() eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at.
-{: .notice}
-
-<div class="notice">
-	<h3>Headline</h3>
-	<div class="inline-btn">
-		<a href="#" class="btn-social instagram"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
-		<a href="#" class="btn-social linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
-	</div><!-- /.inline-btn -->
-</div><!-- /.notice -->
-
-**Inverse Notice:** `.notice-inverse` Maecenas ornare tortor. Donec sed tellus [eget sapien fringilla]() nonummy. Mauris a ante. Suspendisse quam sem, consequat at.
-{: .notice-inverse}
-
-**Info Notice:** `.notice-info` [Maecenas ornare tortor](). Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at.
-{: .notice-info}
-
-**Warning Notice:** `.notice-warning` Maecenas ornare tortor. Donec sed [tellus eget]() sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at.
-{: .notice-warning}
-
-**Danger Notice:** `.notice-danger` Maecenas ornare tortor.[ Donec sed tellus]() eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at.
-{: .notice-danger}
-
-**Success Notice:** `.notice-success` Maecenas ornare tortor. Donec sed tellus eget [sapien fringilla]() nonummy. Mauris a ante. Suspendisse quam sem, consequat at.
-{: .notice-success}
-
-## Fieldsets and Form Elements
-
-<fieldset>
-	<form>
-		<h2>Form Element</h2>
-		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.</p>
-		<label for="text_field">Text Field:</label>
-		<input type="text" id="text_field" />
-		<label for="text_area">Text Area:</label>
-		<textarea id="text_area"></textarea>
-		<p>
-			<label for="select_element">Select Element:</label>
-			<select name="select_element">
-				<optgroup label="Option Group 1">
-					<option value="1">Option 1</option>
-					<option value="2">Option 2</option>
-					<option value="3">Option 3</option>
-				</optgroup>
-				<optgroup label="Option Group 2">
-					<option value="1">Option 1</option>
-					<option value="2">Option 2</option>
-					<option value="3">Option 3</option>
-				</optgroup>
-			</select>
-		</p>
-		<p>
-			<label for="radio_buttons">Radio Buttons:</label>
-			<label><input type="radio" class="radio" name="radio_button" value="radio_1" />Radio 1</label>
-			<label><input type="radio" class="radio" name="radio_button" value="radio_2" />Radio 2</label>
-			<label><input type="radio" class="radio" name="radio_button" value="radio_3" />Radio 3</label>
-		</p>
-		<p>
-			<label for="checkboxes">Checkboxes:</label>
-			<label><input type="checkbox" class="checkbox" name="checkboxes" value="check_1" />Checkbox 1</label>
-			<label><input type="checkbox" class="checkbox" name="checkboxes" value="check_2" />Checkbox 2</label>
-			<label><input type="checkbox" class="checkbox" name="checkboxes" value="check_3" />Checkbox 3</label>
-		</p>
-		<p>
-			<label for="password">Password:</label>
-			<input type="password" class="password" name="password" />
-		</p>
-		<p>
-			<label for="file">File Input:</label>
-			<input type="file" class="file" name="file" />
-		</p>
-		<p>
-			<input class="btn" type="submit" value="Submit" />
-		</p>
-	</form>
-</fieldset>
+    import matplotlib.pyplot as plt
