Edit blog post.

--- a/_posts/2015-06-02-new-site.md
+++ b/_posts/2015-06-02-new-site.md
@@ -11,33 +11,16 @@ author: arokem
 
 Welcome to [nipy.github.io](http://nipy.github.io). These pages are the new community portal for the Neuroimaging in Python community. 
 
-You might ask yourself: "Who is this Nipy community". Roughly speaking, this 
-community is defined by the intersection of the [scientific python](http://scipy.org) community, and the neuroimaging community:  scientists who measure the structure and function of the  brain, primarily using non-invasive methods, such as magnetic resonance 
-imaging (MRI).  
+Nipy is a [community of practice](http://en.wikipedia.org/wiki/Community_of_practice) existing at the intersection of the [scientific python](http://scipy.org) community, and the neuroimaging community: scientists who study the structure and function of the  brain, primarily using non-invasive methods, such as magnetic resonance imaging (MRI).  
 
-During the course of the 21st century, since the [first work](https://github.com/scipy/scipy/commit/02de46a5464f182d3d64be5a7ee1087ae8be8646) on the scipy software library started, this community has grown 
-dramatically to include a sprawling eco-system of libraries, that has taken 
-hold in scientific fields as diverse as (very partial list...) 
-[astronomy](http://www.astropy.org/), 
-[bioinformatics](http://biopython.org/wiki/Main_Page), [nuclear 
-engineering](http://pyne.io/), and [number theory](http://www.sagemath.org/). 
-Thanks to its openess, its clarity, its ease of installation and its 
-portability across a range of platforms, together with other languages such as 
-[R](http://www.r-project.org/), Python is now one of the contenders for 
-the title 'The *lingua franca* of reproducible research'.
+The scientific Python community has grown dramatically to include a sprawling eco-system of libraries, that has taken hold in scientific fields as diverse as (very partial list...)  [astronomy](http://www.astropy.org/),  [bioinformatics](http://biopython.org/wiki/Main_Page), [nuclear  engineering](http://pyne.io/), and [number theory](http://www.sagemath.org/).  Thanks to its openness, its clarity, its ease of installation and its  portability across a range of platforms, together with other languages such as  [R](http://www.r-project.org/), Python is now one of the contenders for the title 'The *lingua franca* of reproducible research'.
 
-In addition to benefitting from these developments, the neuroimaging community has a long and illustrious tradition of contributions back into  this eco system. In fact, several important early contributors to this ecosystem are/were neuroscientists. For example, [John Hunter](http://numfocus.org/news/2012/08/28/johnhunter/), the original author of the [Matplotlib](http://matplotlib.org/) plotting library, (one of the components of [the core scipy stack](http://www.scipy.org/stackspec.html)) started working on MPL while he was a researcher in neuroscience at the University of Chicago. Many other neuroscientists have also contributed over the years various parts and pieces to this ecosystem. 
+In addition to benefitting from these developments, the neuroimaging community has a long tradition of contributions back into this ecosystem. In fact, several important early contributors to this ecosystem are/were neuroscientists. For example, [John Hunter](http://numfocus.org/news/2012/08/28/johnhunter/), the original author of the [Matplotlib](http://matplotlib.org/) plotting library, (one of the components of [the core scipy stack](http://www.scipy.org/stackspec.html)) started working on MPL while he was a researcher in neuroscience at the University of Chicago. Many other neuroscientists have also contributed over the years various parts and pieces to this ecosystem. 
  
-Python and neuroimaging undoubtedly also have an excellent future together. 
-As the neuroscience community becomes increasingly aware of the importance of reproducible computaional research, and as neuroimaging data-sets grow, and cloud-computing methods and services become increasingly accessible, there are more and more ways for neuroscientists to benefit and to contribute to use of the Python scientific stack. 
+Python and neuroimaging undoubtedly also have an excellent future together.  As the neuroscience community becomes increasingly aware of the importance of reproducible computational research, and as neuroimaging data-sets grow, and cloud-computing methods and services become increasingly accessible, there are more and more ways for neuroscientists to benefit and to contribute to use of the Python scientific stack. We also benefit hugely from the growth in interest in data-science in industry as well, and the products, services and methods growing out of this interest. While we keep learning from other adjacent communities, we strive to practice open and collaborative science that be a model for other research and development communities
 
-On the first points of contact for new users of python in neuroimaging is the  [nipy.org](http://nipy.org) website. For many years, this website was generated using the [Sphinx documentation system](http://sphinx-doc.org/) and looked roughly like [this](http://web.archive.org/web/20150205015210/http://www.nipy.org/). Because many of the projects were originally hosted on Sourceforge, the website was also hosted there. Over the years, mall of the nipy projects moved to github, and though there are many benefits to using sphinx for websites (for one, we tend to use it for documenting the software), a more welcoming, informative and dynamic website was definitely needed.
+One the first points of contact for new users of Python in neuroimaging is the  [nipy.org](http://nipy.org) URL. For many years, this website was generated using the [Sphinx documentation system](http://sphinx-doc.org/) and looked roughly like [this](http://web.archive.org/web/20150205015210/http://www.nipy.org/). Because many of the projects were originally hosted on Sourceforge, the website was also hosted there. Over the years, the Nipy projects moved to Github, and though there are many benefits to using sphinx for websites (for one, we tend to use it for documenting the software), a more welcoming, informative and dynamic website was needed. The idea of moving to host our documentation and websites on Github arose occasionally in discussions, and here we are, finally making the move.
 
-And though we haven't quite found room for the text that once welcomed users to our front page, we still stand behind it as a community, and find it a useful reminder of the purpose of this community:  "The purpose of NIPY is to make it easier to do better brain imaging research. We believe that neuroscience ideas and analysis ideas develop together. Good ideas come from understanding; understanding comes from clarity, and clarity must come from well-designed teaching materials and well-designed software. The software must be designed as a natural extension of the underlying ideas."
+And though we haven't quite found room for the text that once welcomed users to our front page, we still (hopefully) stand behind it as a community, and find it a useful reminder of our purpose: "The purpose of NIPY is to make it easier to do better brain imaging research. We believe that neuroscience ideas and analysis ideas develop together. Good ideas come from understanding; understanding comes from clarity, and clarity must come from well-designed teaching materials and well-designed software. The software must be designed as a natural extension of the underlying ideas."
 
 ![Reggie]({{ site.url }}/images/reggie.png)
-
-
-
-
-    import matplotlib.pyplot as plt
